# zzz_yt_analytics

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: daily-pipeline.yml
airflow/dags/: daily.py  setup.py
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/channels/: page.tsx
dashboard/components/: agent-table.tsx  sidebar.tsx  stat-card.tsx  trend-chart.tsx
dashboard/lib/: data.ts  types.ts
data/: aliases.json  warehouse_seed.db
notebooks/: charactersScraping.ipynb  enrichVideos.ipynb  videoDiscovery.ipynb
pipelines/: discovery.py
pipelines/agents/: aliases.py  fetch_html.py  load_to_db.py  load_to_db.py.tmp  parse_html.py
pipelines/videos/: enrich_videos.py
src/: agentScrape.py  agents.py  characterScrape.py  config.py  config.yaml  enrichVideos.py  load_config.py  matching.py  uploadAgents.py  utils.py  videoDiscovery.py  warehouse.py  youtube.py
src/data/: aliases.json  aliases.py
src/extract/: discover_channels.py  discover_videos.py  pull_agents_html.py  scrape_agents.py
src/load/: load_agents.py  load_channel_metadata.py  load_discovered_videos.py
src/pipelines/: build_video_agent_bridge.py  daily_video_discovery.py  enrich_channel.py  enrich_video.py  init_tables.py  initial_video_discovery.py  scrape_agents_from_wiki.py
src/sql/: init_tables.py
src/transform/: channel_to_df.py  parse_agents.py  videos_to_df.py
src/upload/: config.py  videos.py
terraform/: main.tf
utils/: airflow-start.sh  start.sh
(+3 files in other folders)
