[project]
name = "zzz_analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "duckdb>=1.4.3",
  "google-api-python-client>=2.187.0",
  "ipykernel>=7.1.0",
  "notebook>=7.5.1",
  "pandas>=2.3.3",
  "pandas-gbq>=0.33.0",
  "pendulum>=3.1.0",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
